data/derived/comb/progs/unify/prog7030.ml.out
Characters 146-164:
  if r = 0 then buildSine(build(rand, d-1))
                         ^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
